# ai-knowledge-studio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
.playwright-mcp/: page-2026-06-25T08-38-21-544Z.yml
deploy/: docker-compose.yml
docs/: 企业级RAG知识库入库前治理平台方案设计文档.md  企业级RAG知识库入库前治理平台需求分析文档.md  企业级RAG知识库检索前准备工作人工需求说明.md  原型图与需求合并说明.md  工程目录与文件规划.md
docs/architecture/: Java与Python契约.md  接口契约.md  数据库设计.md  模块边界.md
docs/coding-rules/: Java编码规范.md  Python编码规范.md  前端编码规范.md  错误处理规范.md
docs/product/: 分片预览.md  召回测试.md  文档解析.md  知识库管理.md
prototypes/: directory.html  document.html  index.html  knowledge.html  publish.html  retrieval.html  studio.css  studio.js  upload.html
python/document-process-service/: environment.yml  pyproject.toml  requirements.txt  run.py
python/document-process-service/app/: config.py  main.py
python/document-process-service/app/application/: parse_chunk_pipeline.py
python/document-process-service/app/infrastructure/callback/: __init__.py  system_service_client.py
python/document-process-service/app/infrastructure/mq/: __init__.py  consumer.py
python/document-process-service/app/infrastructure/ocr/: __init__.py  mineru_adapter.py
python/document-process-service/app/infrastructure/storage/: __init__.py  minio_client.py
python/document-process-service/app/schemas/: __init__.py  callback.py  task_message.py
scripts/: check-api-contract.ps1  check-api-contract.sh  dev-start.ps1  dev-start.sh  test-all.ps1  test-all.sh  test-frontend.ps1  test-frontend.sh  test-java.ps1  test-java.sh  test-python.ps1  test-python.sh
(+198 files in other folders)
