[project]
name = "document-process-service"
version = "0.1.0"
description = "文档处理服务骨架"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "minio>=7.2.7",
    "pika>=1.3.2",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "openpyxl>=3.1.5",
    "pypdf>=5.0.0",
    "PyMuPDF>=1.24.10",
    "pdfplumber>=0.11.5",
    "python-docx>=1.1.2",
    "mineru[all]>=2.0.0",
    "docling>=2.0.0",
    "transformers>=4.57.0,<5.0.0",
    "ftfy>=6.3.1,<7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
